<resources>
    <string name="app_name">Coffee house</string>
    <string name="welcome_slide_head">Making your days with our product.</string>
    <string name="welcome_slide_description">The best grain, the finest roast, the most powerful flavor.</string>

    <string name="login">Login</string>
    <string name="register">Register</string>

    <string name="my_cart">My Cart</string>
    <string name="total_price">Total Price</string>
    <string name="price_text">Counting…</string>
    <string name="greetings">Good morning</string>
    <string name="add_title">Add</string>
    <string name="welcome_back">Welcome back</string>

    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_member">New member?  </string>
    <string name="user_name">User name</string>
    <string name="terms">By signing up you agree with our Terms of Use</string>
    <string name="already_member">Already a member?  </string>
    <string name="checkout">Checkout</string>


    <string name="categories">Categories</string>
    <string name="coffee">Coffee</string>
    <string name="snacks">Snacks</string>
    <string name="dessert">Dessert</string>

    <string name="my_order">My Order</string>
    <string name="on_going">On going</string>
    <string name="history">History</string>

    <string name="order_day">00 Month | 00:00 TM</string>

    <string name="product_name">Product name</string>
    <string name="address">Prospect Vernadskogo, 86</string>

    <string name="title_profile">Profile</string>
    <string name="title_name">Name</string>
    <string name="title_email">Email</string>
    <string name="title_phone_number">Phone number</string>
    <string name="title_address">Address</string>

    <string name="title_order_status">Order status</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="to_cart">to cart</string>
    <string name="menu_title">menu</string>
    <string name="history_title">history</string>
    <string name="exit">exit</string>

    <!--ERROR MESSAGES -->
    <string name="name_error">Name must contain only letters and start with a capital letter</string>
    <string name="phone_error">Phone number must start with + and be between 10 and 15 digits</string>
    <string name="email_error">The email address must comply with RFC 5322 (https://emailregex.com/)</string>
    <string name="password_error">The password must be at least 8 characters long,
        including at least one uppercase letter, one lowercase letter, and one number</string>
    <string name="login_error">wrong login or password</string>
    <string name="register_error">This mail is already registered</string>
    <string name="wrong_password">Wrong password!</string>
    <string name="confirm_password">Confirm password</string>
    <string name="confirm_error">Password mismatch!</string>
    <string name="user_phone">Phone number</string>
    <string name="no_order">No orders</string>
    <string name="no_order_description">You haven\'t had any orders yet, let\'s start shopping!</string>
    <string name="oops">Ooops...</string>
    <string name="region_eror">Sorry, this feature is not available in your county. Empty your trash and come back later.</string>
    <string name="clear">clear</string>
    <string name="about_title">About</string>
    <string name="about_text">about text</string>
    <string name="no_user">Who are your?</string>
    <string name="no_user_text">It seems you are not registered yet, join us soon!</string>
    <string name="cart_list_num">0</string>
    <string name="in_plate">In the cafeteria</string>
    <string name="title_pay_in_shop">Pay in shop</string>
    <string name="pay_in_shop_text">Pay in place by cash or by card</string>
    <string name="title_pay_by_card">Pay by Card</string>
    <string name="pay_by_card_text">Pay by card using GooglePay</string>
    <string name="pay">Pay now</string>
    <string name="order_complete">Order complete</string>
    <string name="order_id">#404</string>
    <string name="date_text">00 June | 00:00 PM</string>
</resources>