<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingHorizontal="25dp"
    android:paddingVertical="34dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/my_order"
        android:textColor="@color/primary_text"
        android:textSize="20sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:textSize="14sp"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/primary"
        android:text="@string/title_address"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="10dp"
            android:src="@drawable/ic_menu"
            android:background="@drawable/bg_icon_rounded"
            android:backgroundTint="@color/icon_background"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="24dp"
            android:gravity="center_vertical"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/primary"
                android:text="@string/in_plate"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/secondary_text"
                android:text="@string/address"/>
        </LinearLayout>
    </LinearLayout>

    <RadioGroup
        android:id="@+id/rg_pay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="58dp">
        <RadioButton
            android:id="@+id/rb_pay_in_shop"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/bg_product_list"
            android:text="@string/title_pay_in_shop"
            android:textColor="@color/primary_text"
            android:textSize="14sp"
            android:drawableEnd="@drawable/ic_wallet"
            android:padding="20dp"
            android:fontFamily="@font/poppins_bold"
            android:buttonTint="@color/primary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioButton
            android:id="@+id/rb_pay_by_card"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_product_list"
            android:text="@string/title_pay_by_card"
            android:textColor="@color/primary_text"
            android:textSize="14sp"
            android:drawableEnd="@drawable/ic_google_pay"
            android:padding="20dp"
            android:buttonTint="@color/primary"
            android:fontFamily="@font/poppins_bold"/>
    </RadioGroup>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="bottom">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_pay"
            android:layout_width="163dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_primary"
            android:textColor="@color/white"
            android:text="@string/pay"
            android:textAllCaps="false"
            app:icon="@drawable/ic_pay"
            app:iconGravity="textStart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btn_pay"
            android:layout_alignParentStart="true"
            android:layout_marginVertical="1dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/total_price"
            android:textColor="@color/secondary_text"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_total_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btn_pay"
            android:layout_alignEnd="@+id/btn_pay"
            android:layout_marginVertical="1dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/price_text"
            android:textColor="@color/primary_text"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>