<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginVertical="18dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_text"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/secondary_text"
            android:textSize="12sp"
            android:layout_marginVertical="3dp"/>
        <TextView
            android:id="@+id/tv_order_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_id"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/primary"
            android:textSize="12sp"
            app:drawableLeftCompat="@drawable/ic_order_coffee"
            android:drawablePadding="11dp"
            android:layout_marginVertical="3dp"/>
        <TextView
            android:id="@+id/tv_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/primary"
            android:textSize="12sp"
            app:drawableLeftCompat="@drawable/ic_address"
            android:drawablePadding="11dp"
            android:layout_marginVertical="3dp"/>
        <View
            android:id="@+id/view_seporator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/separator"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/price_text"
        android:textColor="@color/primary"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>