<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.menu.DetailsFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginHorizontal="25dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageButton
            android:id="@+id/bt_back_light"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@drawable/ic_arrow"
            android:backgroundTint="@color/black"
            android:scaleX="-1"
            android:layout_marginTop="26dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_product_title"
                android:layout_marginVertical="23dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/primary_text"
                android:textSize="16sp"
                android:text="@string/product_name" />

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/tv_product_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/ic_product"
                app:riv_corner_radius="20dp"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/tv_about_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/primary_text"
                android:textSize="24sp"
                android:text="@string/about_title" />
            <TextView
                android:id="@+id/tv_about_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:letterSpacing="0.05"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins"
                android:textColor="@color/secondary_text"
                android:textSize="16sp"
                android:text="@string/about_text" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_total_price_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20sp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/total_price"
            android:textColor="@color/primary_text"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintStart_toStartOf="@+id/button" />

        <TextView
            android:id="@+id/tv_total_price_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20sp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/price_text"
            android:textColor="@color/primary_text"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toEndOf="@+id/button" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:background="@drawable/btn_primary"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/to_cart"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>