<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.authentication.RegisterFragment">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/bt_back_light"
            android:layout_marginHorizontal="41dp"
            android:layout_marginTop="46dp">
            <ImageButton
                android:id="@+id/bt_back_light"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/ic_arrow"
                android:backgroundTint="@color/black"
                android:scaleX="-1"/>

            <TextView
                android:id="@+id/tv_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="@color/primary_text"
                android:textSize="22sp"
                android:fontFamily="@font/poppins_medium"
                android:layout_marginTop="26dp"/>
            <TextView
                android:id="@+id/text_view_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tv_sign_up"
                android:layout_marginTop="10dp"
                android:text="@string/welcome_back"
                android:textColor="@color/secondary_text"
                android:textSize="14sp"
                android:fontFamily="@font/poppins"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/et_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:ems="10"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/user_name"
                android:inputType="textPersonName"
                android:textColorHint="@color/placeholder"
                android:drawableStart="@drawable/ic_profile"
                android:drawablePadding="1dp"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_welcome" />

            <EditText
                android:id="@+id/et_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"

                android:ems="10"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/user_phone"
                android:inputType="phone"
                android:textColorHint="@color/placeholder"
                android:drawableStart="@drawable/ic_smartphone"
                android:drawablePadding="6dp"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_user_name" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"

                android:ems="10"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/placeholder"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="10dp"

                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_phone_number" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:fontFamily="@font/poppins_medium"
                android:textColorHint="@color/placeholder"
                android:textSize="12sp"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="10dp"

                app:layout_constraintTop_toBottomOf="@+id/et_email"
                android:layout_marginTop="35dp"/>

            <EditText
                android:id="@+id/et_password_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:fontFamily="@font/poppins_medium"
                android:textColorHint="@color/placeholder"
                android:textSize="12sp"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="10dp"

                app:layout_constraintTop_toBottomOf="@+id/et_email"
                android:layout_marginTop="35dp"/>
            <TextView
                android:gravity="center"
                android:id="@+id/text_view_forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms"
                android:fontFamily="@font/poppins"
                android:textSize="12sp"
                android:textColor="@color/primary"
                android:layout_marginTop="15dp"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="46dp">
            <ImageButton
                android:id="@+id/bt_forward_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_circle"
                android:src="@drawable/ic_arrow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

</FrameLayout>