<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.authentication.LogInFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/bt_back_light"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@drawable/ic_arrow"
            android:backgroundTint="@color/black"
            android:scaleX="-1"
            android:layout_marginTop="26dp"
            android:layout_marginStart="26dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/bt_back_light"
            tools:layout_editor_absoluteX="1dp"
            android:layout_marginStart="41dp"
            android:layout_marginEnd="41dp"
            android:layout_marginTop="46dp">
            <TextView
                android:id="@+id/text_view_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/primary_text"
                android:textSize="22sp"
                android:fontFamily="@font/poppins_medium"
                tools:ignore="MissingConstraints" />
            <TextView
                android:id="@+id/text_view_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/text_view_login"
                android:layout_marginTop="10dp"
                android:text="@string/welcome_back"
                android:textColor="@color/secondary_text"
                android:textSize="14sp"
                android:fontFamily="@font/poppins"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/edit_text_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="46dp"
                android:textColorHighlight="@color/primary"
                android:ems="10"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/placeholder"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="7dp"

                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_welcome" />

            <EditText
                android:id="@+id/edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:fontFamily="@font/poppins_medium"
                android:textColorHint="@color/placeholder"
                android:textSize="12sp"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="8dp"

                app:layout_constraintTop_toBottomOf="@+id/edit_text_email"
                android:layout_marginTop="35dp"/>

            <TextView
                android:id="@+id/text_view_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="@string/forgot_password"
                android:fontFamily="@font/poppins_medium"
                android:textSize="14sp"
                android:textColor="@color/primary"
                android:layout_marginTop="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_password" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageButton
            android:id="@+id/bt_forward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="41dp"
            android:background="@drawable/bg_circle"
            android:src="@drawable/ic_arrow"
            android:onClick="onClickForward"
            app:layout_constraintTop_toBottomOf="@+id/layout_main"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/new_member"
            android:fontFamily="@font/poppins"
            android:textColor="@color/secondary_text"
            android:textSize="14sp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/layout_main"
            app:layout_constraintTop_toBottomOf="@+id/bt_forward" />

        <TextView
            android:id="@+id/btn_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/register"
            android:textColor="@color/primary"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView5"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toTopOf="@+id/textView5"
            android:focusable="true" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>